<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <parent>
    <groupId>org.springframework.boot</groupId>
    <artifactId>spring-boot-starter-parent</artifactId>
    <version>3.4.1</version>
    <relativePath/>
  </parent>

  <artifactId>agentic-patterns-examples</artifactId>
  <name>Agentic Patterns :: Examples</name>

  <properties>
    <java.version>21</java.version>
    <maven.compiler.source>21</maven.compiler.source>
    <maven.compiler.target>21</maven.compiler.target>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <agentic-patterns.version>0.1.0-SNAPSHOT</agentic-patterns.version>
    <spring-ai.version>1.0.0-M5</spring-ai.version>
  </properties>

  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>org.springframework.ai</groupId>
        <artifactId>spring-ai-bom</artifactId>
        <version>${spring-ai.version}</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <dependencies>
    <dependency>
      <groupId>com.javaaidev</groupId>
      <artifactId>agentic-patterns-task-execution</artifactId>
      <version>${agentic-patterns.version}</version>
    </dependency>
    <dependency>
      <groupId>com.javaaidev</groupId>
      <artifactId>agentic-patterns-evaluator-optimizer</artifactId>
      <version>${agentic-patterns.version}</version>
    </dependency>
    <dependency>
      <groupId>com.javaaidev</groupId>
      <artifactId>agentic-patterns-parallelization-workflow</artifactId>
      <version>${agentic-patterns.version}</version>
    </dependency>
    <dependency>
      <groupId>com.javaaidev</groupId>
      <artifactId>agentic-patterns-routing-workflow</artifactId>
      <version>${agentic-patterns.version}</version>
    </dependency>
    <dependency>
      <groupId>com.javaaidev</groupId>
      <artifactId>agentic-patterns-chain-workflow</artifactId>
      <version>${agentic-patterns.version}</version>
    </dependency>
    <dependency>
      <groupId>org.springframework.ai</groupId>
      <artifactId>spring-ai-openai-spring-boot-starter</artifactId>
    </dependency>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-web</artifactId>
    </dependency>
    <dependency>
      <groupId>org.springdoc</groupId>
      <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
      <version>2.5.0</version>
    </dependency>
  </dependencies>

  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.13.0</version>
        <configuration>
          <compilerArgs>
            <arg>--enable-preview</arg>
          </compilerArgs>
        </configuration>
      </plugin>
    </plugins>
  </build>
</project>